# AutoFireBase

./: .autofire_ci_test.db  .automation_timings.json  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  4.2 test.autofire  ACTIVATE_AI_INTELLIGENCE.py  AGENTS.md  AI added.py  AI_AUTOMATION_SPEC.md  AI_DEVELOPMENT_REQUIREMENTS.md  AI_FLOOR_PLAN_PROCESSING_COMPLETE.md  AI_IMPLEMENTATION_ROADMAP.md  AI_LOW_VOLTAGE_FIRE_ALARM_TRAINING.md  AI_USAGE_GUIDE.md  AUTOFIRE_AI_FULLY_OPERATIONAL.md  AUTOFIRE_DEVICE_PLACEMENT_REPORT_20251103_215330.txt  AUTOFIRE_FEATURE_MATRIX.md  AUTOFIRE_VISION_PROOF_20251103_215007.txt  AUTOMATION_COMPLETE.md  AUTOMATION_SETUP_COMPLETE.md  AUTOMATION_STATUS.md  AutoFire october.code-workspace  AutoFire.code-workspace  AutoFire.spec  AutoFire.spec.bak_20250908_212519  AutoFireBase.code-workspace  AutoFire_Debug.spec  AutoFire_Full_Spec.rtf  AutoFire_KISS.cmd  AutoFire_Visual_Workflow.rtf  BEFORE_vs_AFTER_COMPARISON.md  BLOCK_IMPLEMENTATION_STATUS.md  BLOCK_INTEGRATION_STATUS.md  BUILD_FALLBACK.txt  BUILD_SUCCESS.md  BUILD_SUMMARY.md  (+363 more)
.continue/: config.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  seed_issues.json
AutoFire_Hub/: README.txt  Start_Hub.cmd  Start_Hub.ps1  agent.config.json
Blocks/: 20230328 CADGEN MISC BLOCKS 23-03-28T12-17-39.dwg  20230328 RISER BLOCKS 23-03-28T11-30-52.dwg  ERRCS 23-04-01T03-09-07.dwg  NFPA_SYMBOLS.dwg
Projects/: Star-Wars-Logo.dxf  project 4.2.autofire  test save.autofire
actions-runner/: .credentials  .credentials_rsaparams  .runner
app/: __init__.py  ai_scaffold.py  app_controller.py  assistant.py  battery_calculator.py  boot.py  boot.py.bak-20250910_184952  boot.py.bak-20250910_191817  boot.py.bak-20250910_222405  boot.py.bak-20250910_223249  boot.py.bak_20250908_213900  calculations.py  catalog.py  catalog.py.bak-20250910_191817  coverage.py  device.py  device.py.bak-20250910_191817  device.py.bak-20250910_224025  device.py.bak-20250910_225816  device.py.bak-20250911_011321  dxf_import.py  enhanced_menus.py  event_handlers.py  layout.py  main.py  (+45 more)
template-vscode-workspace/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
template-vscode-workspace/.continue/: config.json
template-vscode-workspace/.devcontainer/: devcontainer.json  post-create.sh
template-vscode-workspace/scripts/: setup_dev.ps1
(+783 files in other folders)
