[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", ".venv", "scripts/archive"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
]

[tool.coverage.run]
source = ["src", "app"]
omit = ["*/tests/*", "*/__pycache__/*", "build/*", "dist/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "ezdxf.*",
    "shapely.*",
    "reportlab.*",
]
ignore_missing_imports = true

[project]
name = "your-project-name"
version = "0.1.0"
description = "Professional Python project with AI assistance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Add your runtime dependencies here
    # "PySide6",
    # "requests",
    # "fastapi",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "pytest-asyncio",
    "flake8",
    "pylint",
    "bandit",
    "safety",
    "sphinx",
    "sphinx-rtd-theme",
    "coverage",
    "pytest-benchmark",
    "pytest-xdist",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
